mise en place de la section description

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>mon-cv</title>
 </head>
 <body>
+    <h1 class="titre">Jean Dupont</h1>
     
+    <p class="description">
+        Étudiant passionné en informatique, recherchant activement une opportunité 
+        de stage pour développer mes compétences en développement web et technologies 
+        émergentes. Motivé, curieux et rigoureux, je souhaite mettre mes connaissances 
+        techniques au service de projets innovants.
+    </p>
 </body>
 </html>
