mise en place de la section formations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>mon-cv</title>
 </head>
 <body>
-    
+    <div class="section">
+        <h2>Formations</h2>
+        <ul>
+            <li>Diplôme 1</li>
+            <li>Diplôme 2</li>
+        </ul>
+    </div>
 </body>
 </html>
