--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>mon-cv</title>
 </head>
 <body>
-    
+    <div class="section">
+        <h2>Compétences</h2>
+        <ul>
+            <li>Compétence 1</li>
+            <li>Compétence 2</li>
+            <li>Compétence 3</li>
+        </ul>
+    </div>
 </body>
 </html>
